changed on repo...Conflict?

--- a/Content/Topic.htm
+++ b/Content/Topic.htm
@@ -9,6 +9,7 @@
 
 	<p>Delete this text and replace it with your own content.</p>
 	<p>change on repo</p>
+	<p>changed on repo...Conflict?</p>
 
 </body>
 </html>
