--- a/Content/Topic.htm
+++ b/Content/Topic.htm
@@ -1,14 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
-
-<head>
-<link href="Resources/Stylesheets/Styles.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-	<h1>Topic Title</h1>
-
-	<p>Delete this text and replace it with your own content.</p>
-	<p>change on repo</p>
-
-</body>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="2" MadCap:lastHeight="166" MadCap:lastWidth="532">
+    <head>
+        <link href="Resources/Stylesheets/Styles.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <h1>Topic Title (changed in local...conflict?)</h1>
+        <p>Delete this text and replace it with your own content.</p>
+        <p>change on repo</p>
+    </body>
 </html>
